# mudata-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
mudata/: Cargo.toml
mudata/src/: h5mu.rs  lib.rs  mudata.rs
pymudata/: Cargo.toml  pyproject.toml
pymudata/python/pymudata/: __init__.py
pymudata/src/: lib.rs
