[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "pymudata._backend"

[project]
name = "pymudata"
version = "0.1.0"
description = "PyO3 bindings for mudata-rs — out-of-memory MuData backed by anndata-rs"
readme = "../README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Repository = "https://github.com/Starlitnightly/mudata-rs"
